# SSTR

./: LICENSE  README.md  setup.cfg
SSTR/: __init__.py
