[metadata]
name = SSTR-kit
version = 0.0.5
author = Vitor Shinohara & Pedro Mendes
author_email = p.mendes.odilon@gmail.com
description = This is a Natural Language Processing Framework to extract Semantic Shapes Text Representation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pmopedro/SSTR
project_urls =
    Bug Tracker = https://github.com/pmopedro/SSTR/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
include = SSTR, SSTR.*